[gd_scene load_steps=24 format=3 uid="uid://0lf8n6v1j6bu"]

[ext_resource type="Script" uid="uid://b5xvcjqbkjabn" path="res://main.gd" id="1_o7mvt"]
[ext_resource type="Material" uid="uid://gqi6k6j4t8ne" path="res://Town_Parts/Grass.tres" id="2_864rk"]
[ext_resource type="BoxMesh" uid="uid://bmdhgyklhlfog" path="res://Town_Parts/BoxMesh.tres" id="3_0te4u"]
[ext_resource type="Script" uid="uid://kj5qio3yldpe" path="res://Scripts/box_one.gd" id="3_rmln3"]
[ext_resource type="Script" uid="uid://dmn0jaraxuroa" path="res://Town_Parts/box_2.gd" id="4_rr8wn"]
[ext_resource type="Script" uid="uid://pfdceqy1yw1d" path="res://Town_Parts/box_4.gd" id="5_0maa8"]
[ext_resource type="PackedScene" uid="uid://bluqj0q5jre6a" path="res://Scenes/Ghost.tscn" id="5_6nc8a"]
[ext_resource type="PackedScene" uid="uid://bd117desyxv0m" path="res://Scenes/Pads.tscn" id="5_rmln3"]
[ext_resource type="Script" uid="uid://4mvenybxqrwt" path="res://Town_Parts/box_3.gd" id="6_864rk"]
[ext_resource type="ArrayMesh" uid="uid://dpkunxxhdgvyg" path="res://Assets/Models/mountains.obj" id="11_864rk"]
[ext_resource type="Material" uid="uid://n17m3x17hjv2" path="res://Scenes/PadsGreen.tres" id="11_wujyd"]
[ext_resource type="Material" uid="uid://dblqxbtcksjkg" path="res://Town_Parts/Moutain.tres" id="12_2557j"]
[ext_resource type="ArrayMesh" uid="uid://hu7kahst5eg" path="res://Assets/Models/tree.obj" id="12_wujyd"]
[ext_resource type="PackedScene" uid="uid://bkynirlfacl72" path="res://Scenes/PurpleGem.tscn" id="13_2557j"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_idj7w"]
sky_curve = 0.19792612
sky_energy_multiplier = 0.75
sun_angle_max = 83.51

[sub_resource type="Sky" id="Sky_kln2b"]
sky_material = SubResource("ProceduralSkyMaterial_idj7w")

[sub_resource type="Environment" id="Environment_idj7w"]
background_mode = 2
sky = SubResource("Sky_kln2b")
tonemap_mode = 2
fog_enabled = true
fog_density = 0.001

[sub_resource type="BoxShape3D" id="BoxShape3D_rr8wn"]
size = Vector3(1.0756836, 5.991577, 1.1176758)

[sub_resource type="BoxShape3D" id="BoxShape3D_0te4u"]
size = Vector3(42.268005, 14.877441, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_rmln3"]
size = Vector3(41.918213, 13.377014, 1.0535889)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qfpwd"]
albedo_color = Color(0.36647794, 0.30129933, 0.23620394, 1)

[sub_resource type="NavigationMesh" id="NavigationMesh_wujyd"]
vertices = PackedVector3Array(-25.0425, 1.3708696, -23.3675, -25.0425, 1.3708696, 23.3825, 24.9575, 1.3708696, 23.3825, 24.9575, 1.3708696, -23.3675)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]

[sub_resource type="PlaneMesh" id="PlaneMesh_qfpwd"]
size = Vector2(51.085, 47.735)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_o7mvt")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_idj7w")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 6.172058, 0)
light_color = Color(0.728822, 0.728822, 0.728822, 1)
shadow_enabled = true

[node name="City" type="CSGCombiner3D" parent="."]
transform = Transform3D(5.5887423, 0, 0, 0, 1, 0, 0, 0, 4.678951, 4.18157, 0.31652832, 0.070453644)
material_override = ExtResource("2_864rk")
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="City"]
transform = Transform3D(7.6658883, 0, 0, 0, 1.003867, 0, 0, 0, 10.0266075, 0, 0, 0)

[node name="BoxTwo" type="MeshInstance3D" parent="City"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8419139, 2.8789673, 1.1793265)
mesh = ExtResource("3_0te4u")
script = ExtResource("4_rr8wn")

[node name="RigidBody3D" type="StaticBody3D" parent="City/BoxTwo"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.044161797)

[node name="CollisionShape3D" type="CollisionShape3D" parent="City/BoxTwo/RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.037841797, 0.8722534, -0.058837414)
shape = SubResource("BoxShape3D_rr8wn")

[node name="BoxFour" type="MeshInstance3D" parent="City"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8419139, 2.8789673, -3.9952753)
mesh = ExtResource("3_0te4u")
script = ExtResource("5_0maa8")

[node name="RigidBody3D" type="StaticBody3D" parent="City/BoxFour"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="City/BoxFour/RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.029929161, 0.8722515, -0.0090408325)
shape = SubResource("BoxShape3D_rr8wn")

[node name="BoxThree" type="MeshInstance3D" parent="City"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8419139, 2.8789673, -1.5998367)
mesh = ExtResource("3_0te4u")
script = ExtResource("6_864rk")

[node name="RigidBody3D" type="StaticBody3D" parent="City/BoxThree"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="City/BoxThree/RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.03464055, 0.81910515, 0.022123575)
shape = SubResource("BoxShape3D_rr8wn")

[node name="BoxOne" type="MeshInstance3D" parent="City"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8419139, 2.8789673, 3.7400331)
mesh = ExtResource("3_0te4u")
script = ExtResource("3_rmln3")

[node name="RigidBody3D" type="StaticBody3D" parent="City/BoxOne"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="City/BoxOne/RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.037841797, 0.8722534, -0.058837414)
shape = SubResource("BoxShape3D_rr8wn")

[node name="TreeLine" type="Node3D" parent="."]
transform = Transform3D(-0.04534556, 0, 0.9989713, 0, 1, 0, -0.9989713, 0, -0.04534556, -15.335189, 0, 18)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.333793e-08, -0.13043967, 0.9914563, -5.701699e-09, 0.9914563, 0.13043967, -1, 0, -4.3711392e-08, 49.703, 11.425371, 0.087)
fov = 29.6
size = 25.587
near = 0.001

[node name="Nodes" type="Node3D" parent="."]

[node name="RightArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.38355446, 0)

[node name="Right" type="CollisionShape3D" parent="RightArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5631409, 7.949175, -23.917694)
shape = SubResource("BoxShape3D_0te4u")

[node name="LeftArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.111997604, -0.8149719)

[node name="Left" type="CollisionShape3D" parent="LeftArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.737671, 7.766552, 24.955706)
shape = SubResource("BoxShape3D_rmln3")

[node name="EastSpawn" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3062172, -19.327837)

[node name="WestSpawn" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 20.190517)

[node name="Station" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.0693383, 2.4802399, -0.40950394)

[node name="CharacterBody3D2" parent="." instance=ExtResource("5_6nc8a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.069808, 0.8184614, 18.53826)

[node name="CharacterBody3D3" parent="." instance=ExtResource("5_6nc8a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.1510725, 0.8184614, 16.661352)

[node name="CharacterBody3D4" parent="." instance=ExtResource("5_6nc8a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.1510725, 0.8184614, -7.3124466)

[node name="CharacterBody3D5" parent="." instance=ExtResource("5_6nc8a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.1510725, 0.8184614, 5.7378616)

[node name="One" parent="." instance=ExtResource("5_rmln3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5398774, 0.46652317, 16.423368)

[node name="Two" parent="." instance=ExtResource("5_rmln3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.0318689, 0.46652126, 4.8160515)

[node name="Three" parent="." instance=ExtResource("5_rmln3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.81674767, 0.46652126, -8.385411)

[node name="Four" parent="." instance=ExtResource("5_rmln3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.19610453, 0.46652508, -18.773958)

[node name="Tree" type="MeshInstance3D" parent="."]
transform = Transform3D(0.735, 0, 0, 0, 0.735, 0, 0, 0, 0.735, -16.359503, 0.24899673, 12.87092)
mesh = ExtResource("12_wujyd")
surface_material_override/0 = ExtResource("2_864rk")
surface_material_override/1 = ExtResource("2_864rk")

[node name="Tree2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.735, 0, 0, 0, 0.735, 0, 0, 0, 0.735, -14.811321, 0.24899673, 2.0942097)
mesh = ExtResource("12_wujyd")
surface_material_override/0 = ExtResource("2_864rk")
surface_material_override/1 = ExtResource("11_wujyd")

[node name="Tree3" type="MeshInstance3D" parent="."]
transform = Transform3D(0.735, 0, 0, 0, 0.735, 0, 0, 0, 0.735, -11.642338, 0.24899673, 5.04282)
mesh = ExtResource("12_wujyd")
surface_material_override/0 = ExtResource("2_864rk")
surface_material_override/1 = ExtResource("2_864rk")

[node name="Tree4" type="MeshInstance3D" parent="."]
transform = Transform3D(0.735, 0, 0, 0, 0.735, 0, 0, 0, 0.735, -14.631845, 0.6687536, 8.373697)
mesh = ExtResource("12_wujyd")
surface_material_override/0 = ExtResource("2_864rk")
surface_material_override/1 = ExtResource("11_wujyd")

[node name="Tree5" type="MeshInstance3D" parent="."]
transform = Transform3D(0.735, 0, 0, 0, 0.735, 0, 0, 0, 0.735, -16.359503, 0.24899673, -3.4747734)
mesh = ExtResource("12_wujyd")
surface_material_override/0 = ExtResource("2_864rk")
surface_material_override/1 = ExtResource("2_864rk")

[node name="Tree6" type="MeshInstance3D" parent="."]
transform = Transform3D(0.735, 0, 0, 0, 0.735, 0, 0, 0, 0.735, -14.811321, 0.24899673, -14.251484)
mesh = ExtResource("12_wujyd")
surface_material_override/0 = ExtResource("2_864rk")
surface_material_override/1 = ExtResource("11_wujyd")

[node name="Tree7" type="MeshInstance3D" parent="."]
transform = Transform3D(0.735, 0, 0, 0, 0.735, 0, 0, 0, 0.735, -11.642338, 0.24899673, -11.302874)
mesh = ExtResource("12_wujyd")
surface_material_override/0 = ExtResource("2_864rk")
surface_material_override/1 = ExtResource("2_864rk")

[node name="Tree8" type="MeshInstance3D" parent="."]
transform = Transform3D(0.735, 0, 0, 0, 0.735, 0, 0, 0, 0.735, -14.631845, 0.6687536, -7.9719963)
mesh = ExtResource("12_wujyd")
surface_material_override/0 = ExtResource("2_864rk")
surface_material_override/1 = ExtResource("11_wujyd")

[node name="Mountains" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -80.100426, -13.146669, 28.96542)
mesh = ExtResource("11_864rk")
surface_material_override/0 = SubResource("StandardMaterial3D_qfpwd")

[node name="Mountains2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29.492798, -14.785823, 20.137814)
mesh = ExtResource("11_864rk")
surface_material_override/0 = ExtResource("12_2557j")

[node name="PurpleGem" parent="." instance=ExtResource("13_2557j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.485956, 3.9745245, -1.6896191)
visible = false

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_wujyd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.87086964, 0)
visible = false
mesh = SubResource("PlaneMesh_qfpwd")

[connection signal="body_entered" from="RightArea" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="RightArea" to="." method="_on_right_area_body_entered"]
[connection signal="body_entered" from="LeftArea" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="LeftArea" to="." method="_on_left_area_body_entered"]
[connection signal="blue" from="One" to="." method="_on_one_blue"]
[connection signal="blue" from="One" to="City/BoxOne" method="_on_one_blue"]
[connection signal="green" from="One" to="City/BoxOne" method="_on_one_green"]
[connection signal="red" from="One" to="." method="_on_one_red"]
[connection signal="red" from="One" to="City/BoxOne" method="_on_one_red"]
[connection signal="yellow" from="One" to="." method="_on_one_yellow"]
[connection signal="yellow" from="One" to="City/BoxOne" method="_on_one_yellow"]
[connection signal="blue" from="Two" to="City/BoxTwo" method="_on_two_blue"]
[connection signal="green" from="Two" to="City/BoxTwo" method="_on_two_green"]
[connection signal="red" from="Two" to="City/BoxTwo" method="_on_two_red"]
[connection signal="yellow" from="Two" to="City/BoxTwo" method="_on_two_yellow"]
[connection signal="blue" from="Three" to="City/BoxThree" method="_on_three_blue"]
[connection signal="green" from="Three" to="City/BoxThree" method="_on_three_green"]
[connection signal="red" from="Three" to="City/BoxThree" method="_on_three_red"]
[connection signal="yellow" from="Three" to="City/BoxThree" method="_on_three_yellow"]
[connection signal="blue" from="Four" to="City/BoxFour" method="_on_four_blue"]
[connection signal="green" from="Four" to="City/BoxFour" method="_on_four_green"]
[connection signal="red" from="Four" to="City/BoxFour" method="_on_four_red"]
[connection signal="yellow" from="Four" to="City/BoxFour" method="_on_four_yellow"]
