extends CSGBox3D
var naterial = 0

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass


func _on_one_blue() -> void:
	pass # Replace with function body.


func _on_one_red() -> void:
	pass # Replace with function body.


func _on_one_green() -> void:
	pass # Replace with function body.


func _on_one_yellow() -> void:
	pass # Replace with function body.
